# shap_adapool

./: .gitignore  README.md  pyproject.toml  shap.pkl
shap_adapool/: __init__.py  grid_search.py  initializer.py  plotting.py  pooler.py  sentence_pooling.py  token_concatenation.py  types.py
shap_adapool/classifier/: gemma.py  mistral.py
shap_adapool/classifier/mistral/: explain.py  fine_tune.py  init.py
shap_adapool/classifier/mock/: annotate.py  explain.py
shap_adapool/datasets/: __init__.py  common.py  split.py
shap_adapool/datasets/ag_news/: __init__.py  class_distribution.py  cleaning.py  data_source.py  get_data.py  hf_dataset.py
shap_adapool/datasets/companies/: cleaning.py  data_source.py  get_data.py  hf_dataset.py
shap_adapool/datasets/open_canada/: __init__.py  class_distribution.py  cleaning.py  data_source.py  get_data.py  hf_dataset.py
shap_adapool/pooling_strategies/: __init__.py  k_word_pooling.py  sentence_pooling.py  syntax_tree_pooling.py
