[tool.poetry]
name = "shap-adapool"
version = "0.1.0"
description = "Adaptive pooling for Shapley Values"
authors = ["Chris Czarnecki <cczarnec@uwaterloo.ca>"]
license = "MIT"
readme = "README.md"
packages = [{include = "shap_adapool"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.3"
pandas = "^2.2.0"
shap = "^0.44.1"
matplotlib = "^3.8.2"
regex-spm = "^1.0.0"
spacy = {extras = ["cuda11x"], version = "^3.7.2"}
prettyprint = "^0.1.5"
rich = "^13.7.0"
poethepoet = "^0.24.4"
toolz = "^0.12.1"
bitsandbytes = "^0.42.0"
peft = "^0.9.0"
tensorboard = "^2.16.2"
dash = "^2.17.0"
dash-core-components = "^2.0.0"
dash-html-components = "^2.0.0"
dash-bootstrap-components = "^1.6.0"
datasets = "^2.19.1"
evaluate = "^0.4.2"

[tool.poetry.group.dev.dependencies]
pylint = "^3.0.3"
ipykernel = "^6.29.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]
install-pytorch = "pip install torch torchvision torchaudio"
install-transformers = "pip install transformers datasets sentencepiece accelerate evaluate"
tar-plots = "tar -cf plots.tar shap_plot_syntax_tree_pooling_*"
mistral-fine-tune = "python -m shap_adapool.classifier.mistral.fine_tune &> \"results/mistral_fine_tune.log\" & disown $!"
mistral-explain = "python -m shap_adapool.classifier.mistral.explain &> \"results/mistral_explain.log\" & disown $!"
